==> RT-Thread/rt-thread/bsp/apm32/libraries/Drivers/drv_gpio.c <==
#include <board.h>
#include "drv_gpio.h"
#define PIN_NUM(port, no) (((((port) & 0xFu) << 4) | ((no) & 0xFu)))
#define PIN_PORT(pin) ((uint8_t)(((pin) >> 4) & 0xFu))
#define PIN_NO(pin) ((uint8_t)((pin) & 0xFu))
#define PIN_APMPORT(pin) ((GPIO_T *)(GPIOA_BASE + (0x400u * PIN_PORT(pin))))
#define PIN_APMPIN(pin) ((uint16_t)(1u << PIN_NO(pin)))
    #define __APM32_PORT_MAX 12u
    #define __APM32_PORT_MAX 11u
    #define __APM32_PORT_MAX 10u
    #define __APM32_PORT_MAX 9u
    #define __APM32_PORT_MAX 8u
    #define __APM32_PORT_MAX 7u
    #define __APM32_PORT_MAX 6u
    #define __APM32_PORT_MAX 5u
    #define __APM32_PORT_MAX 4u
    #define __APM32_PORT_MAX 3u
    #define __APM32_PORT_MAX 2u
    #define __APM32_PORT_MAX 1u
    #define __APM32_PORT_MAX 0u
#define PIN_APMPORT_MAX __APM32_PORT_MAX
#define ITEM_NUM(items) sizeof(items) / sizeof(items[0])

static void apm32_pin_write(rt_device_t dev, rt_base_t pin, rt_uint8_t value)
{
    GPIO_T *gpio_port;
    uint16_t gpio_pin;

    if (PIN_PORT(pin) < PIN_APMPORT_MAX)
    {
        gpio_port = PIN_APMPORT(pin);
        gpio_pin = PIN_APMPIN(pin);
#if defined(SOC_SERIES_APM32F0)
        GPIO_WriteBitValue(gpio_port, gpio_pin, (GPIO_BSRET_T)value);
#elif defined(SOC_SERIES_APM32F1) || defined(SOC_SERIES_APM32E1) || defined(SOC_SERIES_APM32S1) \
    || defined(SOC_SERIES_APM32F4)
        GPIO_WriteBitValue(gpio_port, gpio_pin, (uint8_t)value);
#endif
    }
}

static rt_int8_t apm32_pin_read(rt_device_t dev, rt_base_t pin)
{
    GPIO_T *gpio_port;
    uint16_t gpio_pin;
    int value = PIN_LOW;

    if (PIN_PORT(pin) < PIN_APMPORT_MAX)
    {
        gpio_port = PIN_APMPORT(pin);
        gpio_pin = PIN_APMPIN(pin);
        value = GPIO_ReadInputBit(gpio_port, gpio_pin);
    }

    return value;
}

static void apm32_pin_mode(rt_device_t dev, rt_base_t pin, rt_uint8_t mode)
{
    GPIO_Config_T gpioConfig;

    if (PIN_PORT(pin) >= PIN_APMPORT_MAX)
    {
        return;
    }

    /* Configure gpioConfigure */
#if defined(SOC_SERIES_APM32F1) || defined(SOC_SERIES_APM32E1) || defined(SOC_SERIES_APM32S1)
    gpioConfig.pin = PIN_APMPIN(pin);
    gpioConfig.mode = GPIO_MODE_OUT_PP;
    gpioConfig.speed = GPIO_SPEED_50MHz;

    if (mode == PIN_MODE_OUTPUT)
    {
        /* output setting */
        gpioConfig.mode = GPIO_MODE_OUT_PP;
    }
    else if (mode == PIN_MODE_INPUT)
    {
        /* input setting: not pull. */
        gpioConfig.mode = GPIO_MODE_IN_PU;
    }
    else if (mode == PIN_MODE_INPUT_PULLUP)
    {
        /* input setting: pull up. */
        gpioConfig.mode = GPIO_MODE_IN_PU;
    }
    else if (mode == PIN_MODE_INPUT_PULLDOWN)
    {
        /* input setting: pull down. */
        gpioConfig.mode = GPIO_MODE_IN_PD;
    }
    else if (mode == PIN_MODE_OUTPUT_OD)
    {
        /* output setting: od. */
        gpioConfig.mode = GPIO_MODE_OUT_OD;
    }
#elif defined(SOC_SERIES_APM32F4)
    gpioConfig.pin = PIN_APMPIN(pin);
    gpioConfig.mode = GPIO_MODE_OUT;
    gpioConfig.otype = GPIO_OTYPE_PP;
    gpioConfig.speed = GPIO_SPEED_50MHz;

    if (mode == PIN_MODE_OUTPUT)
    {
        /* output setting */
        gpioConfig.mode = GPIO_MODE_OUT;
        gpioConfig.otype = GPIO_OTYPE_PP;
    }
    else if (mode == PIN_MODE_INPUT)
    {
        /* input setting: not pull. */
        gpioConfig.mode = GPIO_MODE_IN;
        gpioConfig.pupd = GPIO_PUPD_NOPULL;
    }
    else if (mode == PIN_MODE_INPUT_PULLUP)
    {
        /* input setting: pull up. */
        gpioConfig.mode = GPIO_MODE_IN;
        gpioConfig.pupd = GPIO_PUPD_UP;
    }
    else if (mode == PIN_MODE_INPUT_PULLDOWN)
    {
        /* input setting: pull down. */
        gpioConfig.mode = GPIO_MODE_IN;
        gpioConfig.pupd = GPIO_PUPD_DOWN;
    }
    else if (mode == PIN_MODE_OUTPUT_OD)
    {
        /* output setting: od. */
        gpioConfig.mode = GPIO_MODE_OUT;
        gpioConfig.otype = GPIO_OTYPE_OD;
    }
#elif defined(SOC_SERIES_APM32F0)
    gpioConfig.pin = PIN_APMPIN(pin);
    gpioConfig.mode = GPIO_MODE_OUT;
    gpioConfig.outtype = GPIO_OUT_TYPE_PP;
    gpioConfig.pupd = GPIO_PUPD_NO;
    gpioConfig.speed = GPIO_SPEED_50MHz;

    if (mode == PIN_MODE_OUTPUT)
    {
        /* output setting */
        gpioConfig.mode = GPIO_MODE_OUT;
        gpioConfig.outtype = GPIO_OUT_TYPE_PP;
    }
    else if (mode == PIN_MODE_INPUT)
    {
        /* input setting: not pull. */
        gpioConfig.mode = GPIO_MODE_IN;
        gpioConfig.pupd = GPIO_PUPD_NO;
    }
    else if (mode == PIN_MODE_INPUT_PULLUP)
    {
        /* input setting: pull up. */
        gpioConfig.mode = GPIO_MODE_IN;
        gpioConfig.pupd = GPIO_PUPD_PU;
    }
    else if (mode == PIN_MODE_INPUT_PULLDOWN)
    {
        /* input setting: pull down. */
        gpioConfig.mode = GPIO_MODE_IN;
        gpioConfig.pupd = GPIO_PUPD_PD;
    }
    else if (mode == PIN_MODE_OUTPUT_OD)
    {
        /* output setting: od. */
        gpioConfig.mode = GPIO_MODE_OUT;
        gpioConfig.outtype = GPIO_OUT_TYPE_OD;
    }
#endif
    GPIO_Config(PIN_APMPORT(pin), &gpioConfig);
}

static rt_err_t apm32_pin_attach_irq(struct rt_device *device, rt_base_t pin,
                                rt_uint8_t mode, void (*hdr)(void *args), void *args)
{
    rt_base_t level;
    rt_int32_t irqindex = -1;

    if (PIN_PORT(pin) >= PIN_APMPORT_MAX)
    {
        return -RT_ENOSYS;
    }

    irqindex = bit2bitno(PIN_APMPIN(pin));
    if (irqindex < 0 || irqindex >= ITEM_NUM(pin_irq_map))
    {
        return -RT_ENOSYS;
    }

    level = rt_hw_interrupt_disable();
    if (pin_irq_hdr_tab[irqindex].pin == pin &&
            pin_irq_hdr_tab[irqindex].hdr == hdr &&
            pin_irq_hdr_tab[irqindex].mode == mode &&
            pin_irq_hdr_tab[irqindex].args == args)
    {
        rt_hw_interrupt_enable(level);
        return RT_EOK;
    }
    if (pin_irq_hdr_tab[irqindex].pin != -1)
    {
        rt_hw_interrupt_enable(level);
        return -RT_EBUSY;
    }
    pin_irq_hdr_tab[irqindex].pin = pin;
    pin_irq_hdr_tab[irqindex].hdr = hdr;
    pin_irq_hdr_tab[irqindex].mode = mode;
    pin_irq_hdr_tab[irqindex].args = args;
    rt_hw_interrupt_enable(level);

    return RT_EOK;
}

static rt_err_t apm32_pin_irq_enable(struct rt_device *device, rt_base_t pin,
                                rt_uint8_t enabled)
{
    const struct pin_irq_map *irqmap;
    rt_base_t level;
    rt_int32_t irqindex = -1;
    GPIO_Config_T gpioConfig;
    EINT_Config_T eintConfig;

    if (PIN_PORT(pin) >= PIN_APMPORT_MAX)
    {
        return -RT_ENOSYS;
    }

    if (enabled == PIN_IRQ_ENABLE)
    {
        irqindex = bit2bitno(PIN_APMPIN(pin));
        if (irqindex < 0 || irqindex >= ITEM_NUM(pin_irq_map))
        {
            return -RT_ENOSYS;
        }

        level = rt_hw_interrupt_disable();

        if (pin_irq_hdr_tab[irqindex].pin == -1)
        {
            rt_hw_interrupt_enable(level);
            return -RT_ENOSYS;
        }

        irqmap = &pin_irq_map[irqindex];

        /* Configure gpioConfigure */
        gpioConfig.pin = PIN_APMPIN(pin);
        gpioConfig.speed = GPIO_SPEED_50MHz;
        switch (pin_irq_hdr_tab[irqindex].mode)
        {
#if defined(SOC_SERIES_APM32F0)
        case PIN_IRQ_MODE_RISING:
            gpioConfig.mode = GPIO_MODE_IN;
            gpioConfig.pupd = GPIO_PUPD_PD;
            eintConfig.trigger = EINT_TRIGGER_RISING;
            break;
        case PIN_IRQ_MODE_FALLING:
            gpioConfig.mode = GPIO_MODE_IN;
            gpioConfig.pupd = GPIO_PUPD_PU;
            eintConfig.trigger = EINT_TRIGGER_FALLING;
            break;
        case PIN_IRQ_MODE_RISING_FALLING:
            gpioConfig.mode = GPIO_MODE_IN;
            gpioConfig.pupd = GPIO_PUPD_NO;
            eintConfig.trigger = EINT_TRIGGER_ALL;
            break;
#elif defined(SOC_SERIES_APM32F1) || defined(SOC_SERIES_APM32E1) || defined(SOC_SERIES_APM32S1)
        case PIN_IRQ_MODE_RISING:
            gpioConfig.mode = GPIO_MODE_IN_PD;
            eintConfig.trigger = EINT_TRIGGER_RISING;
            break;
        case PIN_IRQ_MODE_FALLING:
            gpioConfig.mode = GPIO_MODE_IN_PU;
            eintConfig.trigger = EINT_TRIGGER_FALLING;
            break;
        case PIN_IRQ_MODE_RISING_FALLING:
            gpioConfig.mode = GPIO_MODE_IN_FLOATING;
            eintConfig.trigger = EINT_TRIGGER_RISING_FALLING;
            break;
#elif defined(SOC_SERIES_APM32F4)
        case PIN_IRQ_MODE_RISING:
            gpioConfig.mode = GPIO_MODE_IN;
            gpioConfig.pupd = GPIO_PUPD_DOWN;
            eintConfig.trigger = EINT_TRIGGER_RISING;
            break;
        case PIN_IRQ_MODE_FALLING:
            gpioConfig.mode = GPIO_MODE_IN;
            gpioConfig.pupd = GPIO_PUPD_UP;
            eintConfig.trigger = EINT_TRIGGER_FALLING;
            break;
        case PIN_IRQ_MODE_RISING_FALLING:
            gpioConfig.mode = GPIO_MODE_IN;
            gpioConfig.pupd = GPIO_PUPD_NOPULL;
            eintConfig.trigger = EINT_TRIGGER_RISING_FALLING;
            break;
#endif
        }
        GPIO_Config(PIN_APMPORT(pin), &gpioConfig);

#if defined(SOC_SERIES_APM32F0)
        RCM_EnableAPB2PeriphClock(RCM_APB2_PERIPH_SYSCFG);
        SYSCFG_EINTLine((SYSCFG_PORT_T)(((pin) >> 4) & 0xFu), (SYSCFG_PIN_T)irqindex);
#elif defined(SOC_SERIES_APM32F1) || defined(SOC_SERIES_APM32E1) || defined(SOC_SERIES_APM32S1)
        RCM_EnableAPB2PeriphClock(RCM_APB2_PERIPH_AFIO);
        GPIO_ConfigEINTLine((GPIO_PORT_SOURCE_T)(((pin) >> 4) & 0xFu), (GPIO_PIN_SOURCE_T)irqindex);
#elif defined(SOC_SERIES_APM32F4)
        RCM_EnableAPB2PeriphClock(RCM_APB2_PERIPH_SYSCFG);
        SYSCFG_ConfigEINTLine((SYSCFG_PORT_T)(((pin) >> 4) & 0xFu), (SYSCFG_PIN_T)irqindex);
#endif
        eintConfig.line = (EINT_LINE_T)(1u << PIN_NO(pin));
        eintConfig.mode = EINT_MODE_INTERRUPT;
        eintConfig.lineCmd = ENABLE;
        EINT_Config(&eintConfig);

#if defined(SOC_SERIES_APM32F0)
        NVIC_EnableIRQRequest(irqmap->irqno, 5);
#elif defined(SOC_SERIES_APM32F1) || defined(SOC_SERIES_APM32E1) || defined(SOC_SERIES_APM32S1) \
    || defined(SOC_SERIES_APM32F4)
        NVIC_EnableIRQRequest(irqmap->irqno, 5, 0);
#endif
        pin_irq_enable_mask |= irqmap->pinbit;

        rt_hw_interrupt_enable(level);
    }
    else if (enabled == PIN_IRQ_DISABLE)
    {
        irqmap = get_pin_irq_map(PIN_APMPIN(pin));
        if (irqmap == RT_NULL)
        {
            return -RT_ENOSYS;
        }

        level = rt_hw_interrupt_disable();

        pin_irq_enable_mask &= ~irqmap->pinbit;

#if defined(SOC_SERIES_APM32F0)
        if ((irqmap->pinbit >= GPIO_PIN_0) && (irqmap->pinbit <= GPIO_PIN_1))
        {
            if (!(pin_irq_enable_mask & (GPIO_PIN_0 | GPIO_PIN_1)))
            {
                NVIC_DisableIRQRequest(irqmap->irqno);
            }
        }
        else if ((irqmap->pinbit >= GPIO_PIN_2) && (irqmap->pinbit <= GPIO_PIN_3))
        {
            if (!(pin_irq_enable_mask & (GPIO_PIN_2 | GPIO_PIN_3)))
            {
                NVIC_DisableIRQRequest(irqmap->irqno);
            }
        }
        else if ((irqmap->pinbit >= GPIO_PIN_4) && (irqmap->pinbit <= GPIO_PIN_15))
        {
            if (!(pin_irq_enable_mask & (GPIO_PIN_4 | GPIO_PIN_5 | GPIO_PIN_6 | GPIO_PIN_7 | GPIO_PIN_8 | GPIO_PIN_9 |
                                         GPIO_PIN_10 | GPIO_PIN_11 | GPIO_PIN_12 | GPIO_PIN_13 | GPIO_PIN_14 | GPIO_PIN_15)))
            {
                NVIC_DisableIRQRequest(irqmap->irqno);
            }
        }
        else
        {
            NVIC_DisableIRQRequest(irqmap->irqno);
        }
#elif defined(SOC_SERIES_APM32F1) || defined(SOC_SERIES_APM32E1) || defined(SOC_SERIES_APM32S1) \
    || defined(SOC_SERIES_APM32F4)
        if ((irqmap->pinbit >= GPIO_PIN_5) && (irqmap->pinbit <= GPIO_PIN_9))
        {
            if (!(pin_irq_enable_mask & (GPIO_PIN_5 | GPIO_PIN_6 | GPIO_PIN_7 | GPIO_PIN_8 | GPIO_PIN_9)))
            {
                NVIC_DisableIRQRequest(irqmap->irqno);
            }
        }
        else if ((irqmap->pinbit >= GPIO_PIN_10) && (irqmap->pinbit <= GPIO_PIN_15))
        {
            if (!(pin_irq_enable_mask & (GPIO_PIN_10 | GPIO_PIN_11 | GPIO_PIN_12 | GPIO_PIN_13 | GPIO_PIN_14 | GPIO_PIN_15)))
            {
                NVIC_DisableIRQRequest(irqmap->irqno);
            }
        }
        else
        {
            NVIC_DisableIRQRequest(irqmap->irqno);
        }
#endif /* SOC_SERIES_APM32F0 */
        rt_hw_interrupt_enable(level);
    }
    else
    {
        return -RT_ENOSYS;
    }

    return RT_EOK;
}

void GPIO_EXTI_IRQHandler(uint8_t exti_line)
{
#if defined(SOC_SERIES_APM32F0)
    if (EINT_ReadIntFlag(1U << exti_line) != RESET)
#elif defined(SOC_SERIES_APM32F1) || defined(SOC_SERIES_APM32E1) || defined(SOC_SERIES_APM32S1) \
    || defined(SOC_SERIES_APM32F4)
    if (EINT_ReadIntFlag((EINT_LINE_T)(1U << exti_line)) != RESET)
#endif
    {
        EINT_ClearIntFlag(1U << exti_line);
        pin_irq_hdr(exti_line);
    }
}
